istio-system/routing-rules/beer1-com/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: beer1-com
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.beer1.com'
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - '*.beer1.com'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: bookinfo
      mode: SIMPLE
